# stcat

./: CHANGELOG.md  Cargo.toml  README.md
src/: main.rs
