[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["command-line-utilities", "development-tools::debugging", "embedded"]
description = "Log printer for the `dlog` framework"
keywords = ["log", "debuginfo", "ELF"]
license = "MIT OR Apache-2.0"
name = "stcat"
repository = "https://github.com/japaric/stcat"
version = "0.1.0"

[dependencies]
clap = "2.24.2"
error-chain = "0.10.0"
xmas-elf = "0.5.0"
