[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["command-line-utilities", "development-tools::debugging", "embedded"]
description = "Decode logs produced by the `stlog` framework"
keywords = ["ELF", "symtab"]
license = "MIT OR Apache-2.0"
name = "stcat"
readme = "README.md"
repository = "https://github.com/japaric/stcat"
version = "0.2.3"

[dependencies]
failure = "0.1.2"
clap = "2.32.0"
xmas-elf = "0.6.2"
sloggers = "0.2.8"
slog-term = "2.4.0"
slog-async = "2.3.0"

[dependencies.slog]
version = "2.3.3"
features = ["max_level_trace", "release_max_level_trace"]
